--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           }
         }
         .MuuSisältö h4 {
-          margin-top: 40px;
+          padding-top: 40px;
           margin-bottom: 20px;
           font-size: 21px;
           color: var(--blue-dark);
