--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,11 @@
           lääkkeillä.
         </p>
 
-        <a class="BoxLink" href="" target="_blank" rel="noopener noreferrer"
+        <a
+          class="BoxLink"
+          href="https://www.europadonna.fi/rintasyopa/hoitopolku/hormonihoidot/"
+          target="_blank"
+          rel="noopener noreferrer"
           ><svg
             width="26"
             height="16"
