--- a/index.html
+++ b/index.html
@@ -1595,7 +1595,7 @@
               fill="#0074B0"
             />
           </svg>
-          X Hormonihoito
+          Hormonihoito
         </a>
         <h4>Levinnyt rintasyöpä</h4>
         <p>
