--- a/index.html
+++ b/index.html
@@ -374,6 +374,17 @@
             line-height: 28px;
           }
         }
+        /* Override Global Styles */
+        .Hoitopolku blockquote:before {
+          display: none !important;
+        }
+        .Hoitopolku blockquote p:before,
+        .Hoitopolku blockquote p:after {
+          display: none !important;
+        }
+        .Hoitopolku li:before {
+          display: none !important;
+        }
       </style>
       <div>
         <p>
